# Absa-pipeline

./: .gitattributes  .gitignore  README.md  pyproject.toml
backend/: main.py  predictor.py
crawler/: items.py  pipelines.py  scrapy.cfg  settings.py
crawler/spiders/: reviews.py
data/crawled/: cellphones.jsonl
data/inferenced/: cellphones.jsonl
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: Dashboard.jsx  Predict.jsx
models/NER/: config.json  model.safetensors  tokenizer.json  tokenizer_config.json
models/SA/: config.json  model.safetensors
notebook/: Electra_NER.ipynb  Transformer_SA.ipynb  predict.ipynb
script/: inference.py
