[project]
name = "sentiment-analysis"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # crawler
    "scrapy>=2.11",
    "scrapy-playwright>=0.0.40",
    "playwright>=1.40",
    "jsonlines>=4.0",
    # notebooks
    "torch>=2.0",
    "transformers>=4.35",
    "datasets>=2.14",
    "accelerate>=0.24",
    "scikit-learn>=1.3",
    "py-vncorenlp>=0.1.4",
    "pandas>=2.0",
    "numpy>=1.24",
    "seqeval>=1.2",
    "sklearn-crfsuite>=0.3",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    # web app
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "tqdm>=4.66",
]
